# wavekat-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: audio.rs  client.rs  commands.rs  config.rs  main.rs  progress.rs  style.rs
src/commands/: agents.rs  annotations.rs  exports.rs  exports_smart_turn.rs  files.rs  login.rs  logout.rs  me.rs  projects.rs  update.rs  version.rs
