[package]
name = "wavekat-cli"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Command-line client for the WaveKat platform (wk)"
repository = "https://github.com/wavekat/wavekat-cli"
homepage = "https://github.com/wavekat/wavekat-cli"
authors = ["WaveKat"]
readme = "README.md"
keywords = ["wavekat", "cli", "audio", "labeling"]
categories = ["command-line-utilities"]

[[bin]]
name = "wk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
