[package]
name = "wavekat-cli"
version = "0.0.8"
edition = "2021"
license = "Apache-2.0"
description = "Command-line client for the WaveKat platform (wk)"
repository = "https://github.com/wavekat/wavekat-cli"
homepage = "https://github.com/wavekat/wavekat-cli"
authors = ["WaveKat"]
readme = "README.md"
keywords = ["wavekat", "cli", "audio", "labeling"]
categories = ["command-line-utilities"]

[[bin]]
name = "wk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow-array = "53"
arrow-schema = "53"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures-util = "0.3"
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }
unicode-width = "0.2"
url = "2"
webbrowser = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
